# Zygisk-Il2CppDumper

module/src/main/cpp/: CMakeLists.txt  dobby.h  main.cpp
module/src/main/cpp/libs/arm64-v8a/: libdobby.dylib
